--- a/style.css
+++ b/style.css
@@ -7,12 +7,20 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
 }
 
 * {
   color: white;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .wrapper {
