--- a/style.scss
+++ b/style.scss
@@ -62,6 +62,15 @@ justify-content: space-around;
 margin-bottom: 2rem;
 }
 
+.add-btn {
+    font-weight: 700;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    background-color: green;
+    width: 8rem;
+    height: 2rem;
+}
+
 .page__heading {
     padding-top: 2rem;
     margin-bottom: 3rem;
@@ -211,9 +220,6 @@ margin-bottom: 2rem;
     .header__logo {
         flex-basis: 50%;
     }
-    .theme-button {
-        // flex-basis: 50%;
-    }
     .navigation__list {
         display: flex;
         flex-direction: column;
@@ -221,5 +227,26 @@ margin-bottom: 2rem;
     }
     .navigation__link {
         margin-top: 1rem;
+    }
+}
+
+@media(min-width:2560px) {
+    .header__wrapper {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .main__wrapper {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .footer__wrapper {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .link {
+        font-size: 2rem;
+    }
+    .name,.group,.date {
+        font-size: 2rem;
     }
 }
