Добавил анимацию при наведении на кнопку добавить

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ html {
   font-weight: 700;
 }
 
+.add-btn:hover {
+  transform: scale(1.1, 1.1);
+  transition: width 2s, height 2s, transform 2s;
+}
+
 .main__wrapper {
   width: 100%;
   height: 100%;
@@ -118,6 +123,7 @@ html {
   height: 10rem;
   width: 10rem;
 }
+
 .videocards__cardbox {
   display: flex;
   flex-wrap: wrap;
@@ -152,6 +158,7 @@ html {
   height: 6rem;
   width: 14rem;
 }
+
 .rams__cardbox {
   display: flex;
   flex-wrap: wrap;
@@ -186,6 +193,7 @@ html {
   height: 5rem;
   width: 18rem;
 }
+
 .footer__wrapper {
   padding: 20px;
   width: 100%;
