--- a/style.scss
+++ b/style.scss
@@ -49,6 +49,11 @@ html {
    font-weight: 700;
 }
 
+.add-btn:hover {
+    transform: scale(1.1,1.1);
+    transition: width 2s,height 2s,transform 2s;
+}
+
 .main__wrapper {
     width: 100%;
     height: 100%;
